--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -30,25 +30,6 @@
 % use microtype if available
 \IfFileExists{microtype.sty}{\usepackage{microtype}}{}
 \usepackage{longtable,booktabs}
-\usepackage{graphicx}
-% Redefine \includegraphics so that, unless explicit options are
-% given, the image width will not exceed the width of the page.
-% Images get their normal width if they fit onto the page, but
-% are scaled down if they would overflow the margins.
-\makeatletter
-\def\ScaleIfNeeded{%
-  \ifdim\Gin@nat@width>\linewidth
-    \linewidth
-  \else
-    \Gin@nat@width
-  \fi
-}
-\makeatother
-\let\Oldincludegraphics\includegraphics
-{%
- \catcode`\@=11\relax%
- \gdef\includegraphics{\@ifnextchar[{\Oldincludegraphics}{\Oldincludegraphics[width=\ScaleIfNeeded]}}%
-}%
 \ifxetex
   \usepackage[setpagesize=false, % page size defined by xetex
               unicode=false, % unicode breaks when used with xetex
@@ -187,10 +168,10 @@ recreational use and identify a range of chlorophyll \emph{a}
 thresholds. A 50\% chance of exceeding one of the specific advisory
 microcystin concentrations of 0.3, 1, 1.6, and 2 \(\mu\)g/L is
 associatied with chlorophyll \emph{a} concentration thresholds of 23,
-64, 84, and 103, respectively. When managing for these various
-microcystin levels, exceeding these reported chlorophyll \emph{a}
-concentrations should be a trigger for further testing and possible
-management action.
+68, 84, and 104 \(\mu\)g/L, respectively. When managing for these
+various microcystin levels, exceeding these reported chlorophyll
+\emph{a} concentrations should be a trigger for further testing and
+possible management action.
 
 \vspace{3mm}
 
@@ -349,7 +330,7 @@ The median concentration was 7.79 \(\mu\)g/L and the mean was 29.63
 confidence interval across a range of conditional probability values are
 shown in Table \ref{tab:mc_chla_table}. Specific chlorophyll \emph{a}
 that are associated with greater than even odds of exceeding the
-advisory levels were 0.07, 0.07, 3, and 11\(\mu\)g/L for 0.3, 1.0, 1.6,
+advisory levels were 23, 68, 84, and 104\(\mu\)g/L for 0.3, 1.0, 1.6,
 and 2.0 \(\mu\)g/L advisory levels, respectively (Table
 \ref{tab:mc_chla_table} \& Figure \ref{fig:multi_cp_plot}).
 
@@ -357,9 +338,9 @@ The chlorophyll \emph{a} cutoffs may be used to predict whether or not a
 lake exceeds the microcystin health advisories. Doing so allows us to
 compare the accuracy of the prediction as well as evaluate false
 negatives. Total accuracy of the four cutoffs predicting microcystin
-exceedances were 12\% for the USEPA children's drinking water advisory,
-20\% for the WHO drinking water advisory, 22\% for the USEPA adult
-drinking water advisory, and 3\% for the WHO regreational advisory
+exceedances were 74\% for the USEPA children's drinking water advisory,
+86\% for the WHO drinking water advisory, 89\% for the USEPA adult
+drinking water advisory, and 91\% for the WHO regreational advisory
 (Tables \ref{tab:child_conmat_table}, \ref{tab:who_drink_conmat_table},
 \ref{tab:adult_conmat_table}, \& \ref{tab:who_rec_conmat_table}).
 However, total accuracy is only one part of the prediction performace
@@ -370,7 +351,7 @@ microcystin exceedances, the error that should be avoided is predicting
 that no exceedance has occurred when in fact it has. In other words, we
 would like to avoid Type II errors and minimize the proportion of false
 negatives. For the four chlorophyll \emph{a} cut-offs we had a
-proportion of false negatives of 2\%, 2\%, 2\%, and 0\% for the USEPA
+proportion of false negatives of 9\%, 8\%, 6\%, and 5\% for the USEPA
 children's, the WHO drinking water, the USEPA adult, and the WHO
 recreational advisories, respectively. In each case we missed less than
 10\% of the lakes that in fact exceeded the microcystin advisory. While
@@ -397,8 +378,8 @@ with a range of probabilities of exceeding a given health advisory level
 (Table \ref{tab:mc_chla_table}). For the purposes of this discussion we
 focus on a conditional probability of 50\% or greater (i.e., greater
 than even odds to exceed a health advisory level). The 50\% conditional
-probability chlorophyll \emph{a} thresholds represents 59.1\%, 14.3\%,
-5.2\%, and 93.9\% of sample lakes for the USEPA Child, the WHO Drinking,
+probability chlorophyll \emph{a} thresholds represents 28.6\%, 11\%,
+8.9\%, and 7.2\% of sample lakes for the USEPA Child, the WHO Drinking,
 the USEPA Adult, and the WHO recreational levels, respecitvely.
 
 There are numerous possible uses for the chlorophyll \emph{a} and
@@ -468,28 +449,11 @@ Protection Agency.
 
 \section{Figures}\label{figures}
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{manuscript_files/figure-latex/chla_micro_scatter-1.pdf}
-\caption{Scatterplot showing association betweeen chlorophyll \textit{a}
-and microcystin-LR. \label{fig:chla_micro_scatter}}
-\end{figure}
-
-\newpage
-
 \begin{verbatim}
-## Loading required package: grid
+## Saving 6 x 6.8 in image
 \end{verbatim}
 
-\begin{figure}[htbp]
-\centering
-\includegraphics{manuscript_files/figure-latex/epa_child_cp_plot-1.pdf}
-\caption{Conditional probability plots showing association between the
-probability of exceeding various microcystin health advisory Levels. A.)
-Plot for USEPA Child (0.3 \(\mu\)g/L). B.) Plot for WHO Drinking (1
-\(\mu\)g/L). C.) Plot for USEPA Adult (1.6 \(\mu\)g/L). D.) Plot for WHO
-Recreational (2 \(\mu\)g/L). \label{fig:multi_cp_plot}}
-\end{figure}
+\newpage
 
 \newpage
 
@@ -526,26 +490,26 @@ WHO & Recreational: Very High Prob. of Effect & \textgreater{}2000
 a 50\% probability of exceeding a microcystin health advisory
 concentration. \label{tab:mc_chla_table}}\tabularnewline
 \toprule
-Cond. Probability U & SEPA Child (0.3 \(\mu\)g/L) W & HO Drink (1
-\(\mu\)g/L) U & SEPA Adult (1.6 \(\mu\)g/L) W & HO Recreational (2
+Cond. Probability & USEPA Child (0.3 \(\mu\)g/L) & WHO Drink (1
+\(\mu\)g/L) & USEPA Adult (1.6 \(\mu\)g/L) & WHO Recreational (2
 \(\mu\)g/L)\tabularnewline
 \midrule
 \endfirsthead
 \toprule
-Cond. Probability U & SEPA Child (0.3 \(\mu\)g/L) W & HO Drink (1
-\(\mu\)g/L) U & SEPA Adult (1.6 \(\mu\)g/L) W & HO Recreational (2
+Cond. Probability & USEPA Child (0.3 \(\mu\)g/L) & WHO Drink (1
+\(\mu\)g/L) & USEPA Adult (1.6 \(\mu\)g/L) & WHO Recreational (2
 \(\mu\)g/L)\tabularnewline
 \midrule
 \endhead
 0.1 & 0.07 & 0.07 & 0.07 & 1\tabularnewline
-0.2 & 0.07 & 5 & 11 & 15\tabularnewline
-0.3 & 3 & 18 & 32 & 39\tabularnewline
-0.4 & 11 & 39 & 67 & 78\tabularnewline
-0.5 & 23 & 64 & 84 & 103\tabularnewline
-0.6 & 39 & 92 & 115 & 167\tabularnewline
-0.7 & 65 & 116 & 274 & 274\tabularnewline
-0.8 & 115 & 256 & 871 & 871\tabularnewline
-0.9 & 138 & 318 & 871 & 871\tabularnewline
+0.2 & 0.07 & 4.00 & 12.00 & 17\tabularnewline
+0.3 & 3.00 & 17.00 & 32.00 & 45\tabularnewline
+0.4 & 11.00 & 37.00 & 68.00 & 77\tabularnewline
+0.5 & 23.00 & 68.00 & 84.00 & 104\tabularnewline
+0.6 & 39.00 & 97.00 & 115.00 & 185\tabularnewline
+0.7 & 66.00 & 126.00 & 871.00 & 871\tabularnewline
+0.8 & 116.00 & 271.00 & 871.00 & 871\tabularnewline
+0.9 & 170.00 & 516.00 & 871.00 & 871\tabularnewline
 \bottomrule
 \end{longtable}
 
@@ -564,8 +528,8 @@ Not Exceed Exc & eed Row Tot & als &\tabularnewline
 Not Exceed Exc & eed Row Tot & als &\tabularnewline
 \midrule
 \endhead
-Not Exceed & 344 & 78 & 422\tabularnewline
-Exceed & 467 & 139 & 606\tabularnewline
+Not Exceed & 643 & 95 & 738\tabularnewline
+Exceed & 168 & 122 & 290\tabularnewline
 Column Totals & 811 & 217 & 1028\tabularnewline
 \bottomrule
 \end{longtable}
@@ -585,8 +549,8 @@ Not Exceed Exc & eed Row Tot & als &\tabularnewline
 Not Exceed Exc & eed Row Tot & als &\tabularnewline
 \midrule
 \endhead
-Not Exceed & 787 & 98 & 885\tabularnewline
-Exceed & 120 & 23 & 143\tabularnewline
+Not Exceed & 841 & 78 & 919\tabularnewline
+Exceed & 66 & 43 & 109\tabularnewline
 Column Totals & 907 & 121 & 1028\tabularnewline
 \bottomrule
 \end{longtable}
@@ -605,8 +569,8 @@ Not Exceed Exc & eed Row Tot & als &\tabularnewline
 Not Exceed Exc & eed Row Tot & als &\tabularnewline
 \midrule
 \endhead
-Not Exceed & 897 & 82 & 979\tabularnewline
-Exceed & 40 & 9 & 49\tabularnewline
+Not Exceed & 884 & 57 & 941\tabularnewline
+Exceed & 53 & 34 & 87\tabularnewline
 Column Totals & 937 & 91 & 1028\tabularnewline
 \bottomrule
 \end{longtable}
@@ -626,8 +590,8 @@ Not Exceed Exc & eed Row Tot & als &\tabularnewline
 Not Exceed Exc & eed Row Tot & als &\tabularnewline
 \midrule
 \endhead
-Not Exceed & 61 & 2 & 63\tabularnewline
-Exceed & 892 & 73 & 965\tabularnewline
+Not Exceed & 908 & 51 & 959\tabularnewline
+Exceed & 45 & 24 & 69\tabularnewline
 Column Totals & 953 & 75 & 1028\tabularnewline
 \bottomrule
 \end{longtable}
