updates, including proofs

--- a/manuscript/components/manuscript.bib
+++ b/manuscript/components/manuscript.bib
@@ -1,3 +1,13 @@
+@article{loftin2016cyanotoxins,
+  title={Cyanotoxins in inland lakes of the United States: Occurrence and potential recreational health risks in the EPA National Lakes Assessment 2007},
+  author={Loftin, Keith A and Graham, Jennifer L and Hilborn, Elizabeth D and Lehmann, Sarah C and Meyer, Michael T and Dietze, Julie E and Griffith, Christopher B},
+  journal={Harmful Algae},
+  volume={56},
+  pages={77--90},
+  year={2016},
+  publisher={Elsevier}
+}
+
 @article{marion2012vivo,
   title={In vivo phycocyanin flourometry as a potential rapid screening tool for predicting elevated microcystin concentrations at eutrophic lakes},
   author={Marion, Jason W and Lee, Jiyoung and Wilkins III, JR and Lemeshow, Stanley and Lee, Cheonghoon and Waletzko, Evan J and Buckley, Timothy J},
