--- a/manuscript/f1000_submission/manuscript.tex
+++ b/manuscript/f1000_submission/manuscript.tex
@@ -307,7 +307,7 @@ Data and Latest Source Code:
 \href{https://github.com/USEPA/microcystinchla}{\url{https://github.com/USEPA/microcystinchla}}
 
 Archived data and source code at time of publication:
-\href{http://dx.doi.org/10.5281/zenodo.45317}{\url{http://dx.doi.org/10.5281/zenodo.45317}}
+\href{https://doi.org/10.5281/zenodo.45317}{\url{https://doi.org/10.5281/zenodo.45317}}
 
 License: Creative Commons Zero 1.0:
 \href{http://creativecommons.org/publicdomain/zero/1.0/}{\url{http://creativecommons.org/publicdomain/zero/1.0/}}
